[package]
name = "hypervisor"
version = "0.1.0"
authors = ["Bobby Eshleman <bobbyeshleman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
hypervisor_test = []
